guardar datos desde el front de la tienda a la api

--- a/admin-panel-categorias.html
+++ b/admin-panel-categorias.html
@@ -250,7 +250,7 @@
 						<div class="col-8">
 							<div class="content-item-list row product-features-tabs">
 								<div class="col-12">
-									<form action="" class="forms admin-form" data-url="http://192.168.1.16:8080/api/admin/taxes">
+									<form class="forms admin-form" action="http://192.168.1.16:8080/api/admin/taxes">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
 												<div class="item d-inline-block active tabs1" data-content="item1">
