--- a/admin-panel-preguntas.html
+++ b/admin-panel-preguntas.html
@@ -249,7 +249,7 @@
 						<div class="col-8">
 							<div class="content-item-list row product-features-tabs">
 								<div class="col-12">
-									<form action="" class="forms admin-form" action="http://127.0.0.1:8080/api/admin/taxes">
+									<form class="forms admin-form" action="http://127.0.0.1:8080/api/admin/faqs">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
 												<div class="item d-inline-block active tabs1" data-content="item1">
@@ -282,9 +282,9 @@
 														</select>
 													</div>
 													<label for="pregunta">Titulo:</label>
-													<input id="pregunta" type="text" name="title">
+													<input id="pregunta" type="text" name="question">
 													<label for="description">Descripción:</label>
-													<textarea for="description" name="description"></textarea>
+													<textarea for="description" name="answer"></textarea>
 												</div>
 											</div>
 											<div class="item-content cont-tabs1" data-content="item2">
