--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="login d-flex justify-content-center align-items-center">
-        <form class="formulario" action="">
+        <form class="formulario login-form" action="http://127.0.0.1:8080/api/admin/taxes">
             <div class="col logo-img p-1">								
                 <svg class="svg-img" version="1.1"
                 id="svg2" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:ns1="http://sozi.baierouge.fr" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
@@ -124,7 +124,7 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div>
-          <button id="submitForm" class="w-100 btn btn-lg btn-principal btn-sm">Sign in</button>
+          <button id="submitLoginForm" class="w-100 btn btn-lg btn-principal btn-sm">Sign in</button>
         </form>
       </main>
       <div id="notification-wrapper" class="notification-wrapper">
