--- a/admin-panel.html
+++ b/admin-panel.html
@@ -250,7 +250,7 @@
 						<div class="col-8">
 							<div class="content-item-list row product-features-tabs">
 								<div class="col-12">
-									<form action="" class="forms admin-form">
+									<form action="http://127.0.0.1:8080/api/admin/users" class="forms admin-form">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
 												<div class="item d-inline-block active tabs1" data-content="item1">
@@ -293,12 +293,8 @@
 											</div>
 										</div>
 										<div class="footer">
-											<button id="submitForm" class="save">
-												GUARDAR
-											</button>
-											<button class="reset">
-												RESET
-											</button>
+											<button id="submitForm" class="save">GUARDAR</button>
+											<button class="reset">RESET</button>
 
 										</div>
 									</form>
