--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
-			<script type="module" src="js/index.js"></script>
+			<script type="module" src="js/front/index.js"></script>
 		</body>
 	
 	</html>
