--- a/login.html
+++ b/login.html
@@ -133,6 +133,6 @@
             <p id="notification-message"></p>
         </div>
     </div>
-      <script type="module" src="js/index.js"></script>
+      <script type="module" src="js/front/index.js"></script>
 </body>
 </html>
