--- a/producto.html
+++ b/producto.html
@@ -268,7 +268,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
-			<script type="module" src="js/index.js"></script>
+			<script type="module" src="js/front/sindex.js"></script>
 		</body>
 	
 	</html>
