--- a/admin-panel-preguntas.html
+++ b/admin-panel-preguntas.html
@@ -252,13 +252,13 @@
 									<form class="forms admin-form" action="http://127.0.0.1:8080/api/admin/faqs">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
-												<div class="item d-inline-block active tabs1" data-content="item1">
+												<div class="item d-inline-block active tabs" data-content="item1">
 													FAQS
 												</div>
-												<div class="item d-inline-block tabs1" data-content="item2">
+												<div class="item d-inline-block tabs" data-content="item2">
 													Imágenes
 												</div>
-												<div class="item d-inline-block tabs1" data-content="item3">
+												<div class="item d-inline-block tabs" data-content="item3">
 													SEO
 												</div>
 											</div>
@@ -271,7 +271,7 @@
 											</div>
 										</div>
 										<div>
-											<div class="item-content active cont-tabs1" data-content="item1">
+											<div class="item-content active cont-tabs" data-content="item1">
 												<div class="pos-relative">
 													<div class="mb-3">
 														<label for="category">Categoria:</label>
@@ -287,10 +287,10 @@
 													<textarea for="description" name="answer"></textarea>
 												</div>
 											</div>
-											<div class="item-content cont-tabs1" data-content="item2">
+											<div class="item-content cont-tabs" data-content="item2">
 												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis illum ut omnis consectetur tempora? Voluptatibus!
 											</div>
-											<div class="item-content cont-tabs1" data-content="item3">
+											<div class="item-content cont-tabs" data-content="item3">
 												Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
 											</div>
 										</div>
@@ -319,7 +319,7 @@
 			</div>
 
 			<!-- FIN footer -->
-			<script type="module" src="js/admin-index.js"></script>
+			<script type="module" src="js/admin/index.js"></script>
 		</body>
 	
 	</html>
