--- a/admin-panel3.html
+++ b/admin-panel3.html
@@ -253,13 +253,13 @@
 									<form action="" class="forms admin-form" data-url="http://192.168.1.16:8080/api/admin/taxes">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
-												<div class="item d-inline-block active tabs1" data-content="item1">
+												<div class="item d-inline-block active tabs" data-content="item1">
 													Contenido
 												</div>
-												<div class="item d-inline-block tabs1" data-content="item2">
+												<div class="item d-inline-block tabs" data-content="item2">
 													Imágenes
 												</div>
-												<div class="item d-inline-block tabs1" data-content="item3">
+												<div class="item d-inline-block tabs" data-content="item3">
 													SEO
 												</div>
 											</div>
@@ -272,7 +272,7 @@
 											</div>
 										</div>
 										<div>
-											<div class="item-content active cont-tabs1" data-content="item1">
+											<div class="item-content active cont-tabs" data-content="item1">
 												<div class="pos-relative">
 													<label for="tipo">Tipo</label>
 													<input id="tipo" type="number" name="type">
@@ -283,10 +283,10 @@
 													</select>
 												</div>
 											</div>
-											<div class="item-content cont-tabs1" data-content="item2">
+											<div class="item-content cont-tabs" data-content="item2">
 												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis illum ut omnis consectetur tempora? Voluptatibus!
 											</div>
-											<div class="item-content cont-tabs1" data-content="item3">
+											<div class="item-content cont-tabs" data-content="item3">
 												Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
 											</div>
 										</div>
@@ -315,7 +315,7 @@
 			</div>
 
 			<!-- FIN footer -->
-			<script type="module" src="js/admin-index.js"></script>
+			<script type="module" src="js/admin/index.js"></script>
 		</body>
 	
 	</html>
