--- a/carrito.html
+++ b/carrito.html
@@ -366,7 +366,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
-            <script type="module" src="js/index.js"></script>
+            <script type="module" src="js/front/index.jss"></script>
 		</body>
 	
 	</html>
