--- a/contacto.html
+++ b/contacto.html
@@ -261,7 +261,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
-			<script type="module" src="js/index.js"></script>
+			<script type="module" src="js/front/index.js"></script>
 		</body>
 	
 	</html>
