--- a/admin-panel.html
+++ b/admin-panel.html
@@ -21,7 +21,8 @@
 
 		<body>
 			<div class="admin-panel">
-				<div class="sidebar-menu">
+				<sidebar-component title="sidebar"></sidebar-component>
+				<!-- <div class="sidebar-menu">
 					<div class="sidebar-header">
 						<div class="logo">
 							<a href="index.html">
@@ -179,7 +180,7 @@
 							</ul>
 						</nav>
 					</div>
-				</div>
+				</div> -->
 				<div class="header">
 					<div class="izda">
 						<div class="hamburger is-active" id="hamburger-3">
@@ -206,7 +207,7 @@
 				<div class="main-content container-fluid">
 					<div class="row">
 						<div class="col">
-							<h2>Categorías</h2>
+							<page-title-component title="Categorías"></page-title-component>
 						</div>
 					</div>
 					<div class="row">
