sidebar pasa titulo pagina (proceso)

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -21,7 +21,9 @@
 
 		<body>
 			<div class="admin-panel">
-				<sidebar-component title="sidebar"></sidebar-component>
+				<div class="container-sidebar">
+					<sidebar-component></sidebar-component>
+				</div>
 				<!-- <div class="sidebar-menu">
 					<div class="sidebar-header">
 						<div class="logo">
