--- a/admin-panel-categorias.html
+++ b/admin-panel-categorias.html
@@ -303,12 +303,13 @@
 					</div>
 				</div>
 			</div>
-			<div id="notification-wrapper" class="notification-wrapper">
+			<notification-component></notification-component>
+			<!-- <div id="notification-wrapper" class="notification-wrapper">
 				<div id="notification" class="notification">
 					<img src="img/sobre.png" alt="">
 					<p id="notification-message"></p>
 				</div>
-			</div>
+			</div> -->
 			</div>
 
 			<!-- FIN footer -->
