--- a/admin-panel-preguntas.html
+++ b/admin-panel-preguntas.html
@@ -310,12 +310,13 @@
 					</div>
 				</div>
 			</div>
-			<div id="notification-wrapper" class="notification-wrapper">
+			<notificacion-componente></notificacion-componente>
+			<!-- <div id="notification-wrapper" class="notification-wrapper">
 				<div id="notification" class="notification">
 					<img src="img/sobre.png" alt="">
 					<p id="notification-message"></p>
 				</div>
-			</div>
+			</div> -->
 			</div>
 
 			<!-- FIN footer -->
