Cambio menu aside

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -21,7 +21,7 @@
 		<body>
 			<div class="admin-panel">
 				<div class="container-sidebar">
-					<sidebar-component menu="admin"></sidebar-component>
+					<sidebar-component menu="admin-header"></sidebar-component>
 				</div>
 				<div class="container-main">
 					<div class="header">
