carga de datos al pulsar en el menu

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -55,7 +55,8 @@
 						</div>
 						<div class="row">
 							<div class="col-4">
-								<ul class="items-list px-3">
+								<table-component url="/api/admin/users"></table-component>
+								<!-- <ul class="items-list px-3">
 									<li class="item">
 										<p><span class="name">Nombre: </span>Sa Lloca loca S.L.</p>
 										<div class="options d-flex justify-content-end align-items-center">
@@ -89,7 +90,7 @@
 											</div>
 										</div>
 									</li>
-								</ul>
+								</ul> -->
 							</div>
 							<div class="col-8">
 								<div class="content-item-list row product-features-tabs">
