formulario de usuarios en proceso

--- a/checkout.html
+++ b/checkout.html
@@ -278,7 +278,7 @@
 			</main>
 			<div id="notification-wrapper" class="notification-wrapper">
 				<div id="notification" class="notification">
-					<img src="img/sobre.png" alt="">
+					<img src="img/sobre.svg" alt="">
 					<p id="notification-message"></p>
 				</div>
 			</div>
