--- a/admin-panel.html
+++ b/admin-panel.html
@@ -113,15 +113,11 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div id="notification-wrapper" class="notification-wrapper">
-				<div id="notification" class="notification">
-					<img src="img/sobre.png" alt="">
-					<p id="notification-message"></p>
-				</div>
-			</div>
+				<modal-confirm-component></modal-confirm-component>
 			</div>
 
+			<notificacion-componente></notificacion-componente>
+	
 			<!-- FIN footer -->
 			<script type="module" src="js/admin/index.js"></script>
 		</body>
