--- a/admin-panel.html
+++ b/admin-panel.html
@@ -59,61 +59,11 @@
 							</div>
 							<div class="col-8">
 								<data-form url="/api/admin/users"></data-form>
-										<!-- <form action="http://127.0.0.1:8080/api/admin/users" class="forms admin-form">
-											<div class="barra-opciones d-flex justify-content-sm-between" >
-												<div>
-													<div class="item d-inline-block active tabs" data-content="item1">
-														Contenido
-													</div>
-													<div class="item d-inline-block tabs" data-content="item2">
-														Imágenes
-													</div>
-													<div class="item d-inline-block tabs" data-content="item3">
-														SEO
-													</div>
-												</div>
-												<div class="options d-flex justify-content-end align-items-center">
-	
-													  <label class="on-off" for="toggle">
-														<input id="toggle" type="checkbox">
-														<span class="slider"></span>
-													  </label>
-												</div>
-											</div>
-											<div>
-												<div class="item-content active cont-tabs" data-content="item1">
-													<div class="pos-relative">
-														<label for="nombre">Nombre</label>
-														<input id="nombre" type="text" name="name" data-validate="names">
-														<p class="error-message">Formato incorrecto</p>
-														<label for="email">Email</label>
-														<input id="email" type="text"  name="email" data-validate="emails">
-														<p class="error-message">Formato incorrecto</p>
-														<label for="pass">Password</label>
-														<input id="pass" type="password"  name="password" data-validate="passwords">
-														<p class="error-message">Formato incorrecto</p>
-													</div>
-												</div>
-												<div class="item-content cont-tabs" data-content="item2">
-													Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis illum ut omnis consectetur tempora? Voluptatibus!
-												</div>
-												<div class="item-content cont-tabs" data-content="item3">
-													Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
-												</div>
-											</div>
-											<div class="footer">
-												<button id="submitForm" class="save">GUARDAR</button>
-												<button class="reset">RESET</button>
-	
-											</div>
-										</form> -->
-									</div>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<modal-confirm-component></modal-confirm-component>
+				<modal-confirm-component url="/api/admin/users"></modal-confirm-component>
 			</div>
 
 			<notificacion-componente></notificacion-componente>
